# status-monitor

./: .env.example  .gitignore  CLIENT-SETUP.md  Caddyfile  Caddyfile.host  DEPLOY-CADDY-HOST.md  DEPLOYMENT.md  README.md  claude.md  docker-compose.build.yml  docker-compose.caddy.yml  docker-compose.production-caddy.yml  docker-compose.production.yml  docker-compose.yml  setup-caddy.sh  todo.md
.github/workflows/: docker-build.yml
client/: .env.example  Cargo.toml  install.sh  status-monitor-client.service  uninstall.sh
client/src/: config.rs  main.rs  metrics.rs  reporter.rs  updater.rs
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile
server/migrations/: 001_initial_schema.sql
server/src/: db.rs  main.rs  models.rs  services.rs  ws.rs
server/src/routes/: clients.rs  metrics.rs  mod.rs  settings.rs
web/: Dockerfile  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/client/[id]/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: client-card.tsx  history-chart.tsx  metric-gauge.tsx  nav.tsx  providers.tsx  sparkline.tsx  stats-table.tsx
web/src/hooks/: useMetricsPolling.ts  useMetricsWebSocket.ts
web/src/lib/: api.ts  utils.ts
web/src/types/: index.ts
