[package]
name = "status-monitor-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# System information
sysinfo = "0.32"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system traversal (for Docker size calculation)
walkdir = "2"

# NVIDIA GPU monitoring (optional)
nvml-wrapper = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Environment
dotenvy = "0.15"

# Hostname
hostname = "0.4"

# Linux system calls (for inode calculation)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
